src/test/deca/context/invalid/created/decl_var/decl_type_inconnu.deca
// Description :
//    test d'une déclaration de variable avec type inconnu
//
// Resultats :
//		Erreur contextuelle
//    	Ligne 10: (0.2) Type non reconnu


{
typeInconnu a; 
}